# LinuxApplicationDevelopment2022

./: README.md
01_GitBuildReq/: hello.c
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile  test.sh
05_Debugging/: Makefile  range.c
05_Debugging/test/: test.sh
05_Debugging/test/gdb/: gdb_script1  gdb_script2
06_Regexps/: Makefile  esub.c  test.sh
09_I18n/: CMakeLists.txt  guesser.c
09_I18n/po/: en.po  ru.po
